--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 /* Styles généraux */
 :root {
   --black: #000;
+  --black-seconday: #1b1b1b;
   --white: #fff;
   --red-primary: #E30613;
   --red-secondary: #AA040E;
@@ -52,13 +53,14 @@ a {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
+  padding: 2rem 0;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  color: #d02b2b;
+  color: var(--red-primary);
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -94,7 +96,6 @@ header#navbar.sticky {
 
 
 nav {
-  /* width: 55%; */
   min-width: 500px;
 }
 
@@ -158,6 +159,58 @@ nav ul li:hover a {
 
 /** hero section **/
 section#hero {
-  padding-top: 10rem;
+  padding-top: 8rem;
+  height: 100dvh;
+  min-height: 100svh;
   background-image: linear-gradient(to right, var(--white), var(--gray));
+}
+
+section#hero .container {
+  display: grid;
+  grid-template-columns: 1.1fr 0.9fr;
+  gap: 1rem;
+  height: 100%;
+}
+
+section#hero .container div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
+section#hero .container div:nth-child(1) h1 {
+  font-size: 4.8rem;
+  font-weight: 700;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: var(--black-seconday);
+  margin-bottom: 2rem;
+  line-height: 1.5;
+}
+
+.text-container {
+  width: 10ch;
+  display: inline-block;
+  vertical-align: bottom;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+#dynamic-text {
+  color: var(--red-primary);
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid var(--red-primary);
+  animation: blink-caret 0.7s step-end infinite;
+}
+
+@keyframes blink-caret {
+  50% {
+    border-color: transparent;
+  }
+}
+
+section#hero .container div:nth-child(1) p {
+  font-size: 2rem;
 }
