--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,6 @@ header#navbar.sticky {
   height: 58px;
 }
 
-
 nav {
   min-width: 500px;
 }
@@ -222,6 +221,94 @@ section#hero .container div:nth-child(1) .btn-primary {
 
 /** Services Section **/
 
-section#services {
-  padding: 5rem 0;
+#services {
+  padding: 9rem 0;
+}
+
+#services header {
+  padding: 2rem 0;
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#services header h1 {
+  font-size: 4rem;
+  text-transform: uppercase;
+}
+
+#services header h3 {
+  font-size: 2rem;
+  color: var(--black);
+  margin-top: 1rem;
+}
+
+.services-grid {
+  width: 80svw;
+  max-width: 1100px;
+  margin: 2rem auto 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5rem 3rem;
+}
+
+.service-item {
+  width: 430px;
+  height: 500px;
+  border-radius: 16px;
+  margin: 0 auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+
+  /* box-shadow: 15px 15px 30px #bebebe,
+  -15px -15px 30px #ffffff;  */
+}
+
+.service-pic {
+  width: 100%;
+  /* height: 200px; */
+  height: 43%;
+  background-size: cover;
+  border-top-right-radius: 16px;
+  border-top-left-radius: 16px;
+}
+
+.services-grid .service-item:nth-child(1) .service-pic {
+  background-image: url("./assets/images/sprinkler.jpg");
+}
+
+.services-grid .service-item:nth-child(2) .service-pic {
+  background-image: url("./assets/images/desenfumage.jpg");
+}
+
+.services-grid .service-item:nth-child(3) .service-pic {
+  background-image: url("./assets/images/detecteurs.jpg");
+}
+
+.services-grid .service-item:nth-child(4) .service-pic {
+  background-image: url("./assets/images/protection_passive.jpg");
+}
+
+.service-title {
+  width: fit-content;
+  min-width: 250px;
+  max-width: 90%;
+  padding: 1rem 2rem;
+  background-color: var(--red-secondary);
+  color: var(--white);
+  text-align: center;
+  margin: 0 auto;
+  border-radius: 80px;
+  top: -2.5rem;
+}
+
+.service-desc {
+  width: 90%;
+  margin: 0 auto;
+  padding-bottom: 2rem;
+  flex-grow: 1;
+}
+
+.service-desc p {
+  margin-bottom: .5rem;
 }
