--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 /* Styles généraux */
 :root {
   --black: #000;
   --black-seconday: #1b1b1b;
   --white: #fff;
-  --red-primary: #E30613;
-  --red-secondary: #AA040E;
-  --gray: #ADADAC;
+  --red-primary: #e30613;
+  --red-secondary: #aa040e;
+  --gray: #adadac;
 }
 
 * {
@@ -79,18 +79,18 @@ header#navbar {
   justify-content: space-between;
   align-items: center;
   padding: 3rem 5rem;
-  transition: .6s;
+  transition: 0.6s;
   z-index: 10000;
 }
 
 header#navbar.sticky {
   background-color: var(--white);
   padding: 1rem 5rem;
-  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, .3);
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.3);
 }
 
 .logo {
-  width: 200px;
+  max-width: 200px;
   height: 58px;
 }
 
@@ -105,11 +105,11 @@ nav ul {
 }
 
 nav ul li {
-  padding: .6rem 1.4rem;
+  padding: 0.6rem 1.4rem;
   border: solid 1px var(--gray);
   border-radius: 8px;
   margin: 0 1rem;
-  transition: .6s;
+  transition: 0.6s;
 }
 
 nav ul li:hover {
@@ -124,7 +124,7 @@ nav ul li a {
   color: var(--black);
   letter-spacing: 0.2rem;
   font-weight: 500;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 nav ul li:hover a {
@@ -132,7 +132,7 @@ nav ul li:hover a {
 }
 
 .btn-primary {
-  padding: .6rem 2.5rem;
+  padding: 0.6rem 2.5rem;
   background-color: var(--red-primary);
   border: solid 1px var(--red-primary);
   border-radius: 3rem;
@@ -310,5 +310,42 @@ section#hero .container div:nth-child(1) .btn-primary {
 }
 
 .service-desc p {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
+}
+
+/* ABOUT SECTION */
+
+#about {
+  padding-bottom: 6rem;
+  background-color: var(--gray);
+  /* min-height: 100svh; */
+}
+
+#about .container {
+  height: 100svh;
+  padding: 9rem 0 0;
+  display: grid;
+  grid-template-columns: 1.1fr 0.9fr;
+  column-gap: 1.5rem;
+}
+
+#about .slogan {
+  height: 100svh;
+  background-image: url("./assets/images/pyro_slogan.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#about .transparent {
+  height: 100svh;
+  background-color: white;
+  /* z-index: -1; */
+}
+
+#about .stats {
+  background-color: var(--gray);
+  border: solid 1px yellow;
+  height: 100svh;
 }
