--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,10 @@ h4 {
   color: var(--red-primary);
 }
 
+li {
+  list-style: none;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   html {
     scroll-behavior: smooth;
@@ -109,13 +113,14 @@ nav ul li {
   border: solid 1px var(--gray);
   border-radius: 8px;
   margin: 0 1rem;
+  cursor: pointer;
   transition: 0.6s;
 }
 
+nav ul li.active,
 nav ul li:hover {
   background-color: var(--red-primary);
   border-color: var(--red-primary);
-  cursor: pointer;
 }
 
 nav ul li a {
@@ -127,6 +132,7 @@ nav ul li a {
   transition: 0.3s;
 }
 
+nav ul li.active a,
 nav ul li:hover a {
   color: var(--white);
 }
@@ -316,9 +322,7 @@ section#hero .container div:nth-child(1) .btn-primary {
 /* ABOUT SECTION */
 
 #about {
-  padding-bottom: 6rem;
   background-color: var(--gray);
-  /* min-height: 100svh; */
 }
 
 #about .container {
@@ -327,6 +331,83 @@ section#hero .container div:nth-child(1) .btn-primary {
   display: grid;
   grid-template-columns: 1.1fr 0.9fr;
   column-gap: 1.5rem;
+}
+
+#about .container > div:nth-of-type(2) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#about .container .slider {
+  height: 90%;
+  max-height: 550px;
+  width: 359px;
+  max-width: 100%;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+#about .container .list {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  display: flex;
+  width: max-content;
+  transition: 1s;
+}
+
+#about .container .slider .list img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#about .container .slider .buttons {
+  position: absolute;
+  top: 45%;
+  left: 5%;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#about .container .slider .buttons button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--gray);
+  color: var(--white);
+  border: none;
+  font-size: 2.5rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#about .container .slider .dots {
+  position: absolute;
+  bottom: 1rem;
+  color: var(--white);
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.dots li {
+  width: 1rem;
+  height: 1rem;
+  background-color: var(--white);
+  margin: 1.5rem;
+  border-radius: 20px;
+  transition: 0.6s;
+}
+
+.dots li.active {
+  width: 3rem;
 }
 
 #about .slogan {
@@ -338,14 +419,132 @@ section#hero .container div:nth-child(1) .btn-primary {
   background-attachment: fixed;
 }
 
-#about .transparent {
-  height: 100svh;
-  background-color: white;
-  /* z-index: -1; */
-}
-
 #about .stats {
   background-color: var(--gray);
-  border: solid 1px yellow;
+  /* background-color: var(--black-seconday); */
+  padding: 9rem 0 6rem;
   height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#about .stats-content {
+  width: 80%;
+  max-width: 1200px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 1.5rem;
+}
+
+.outer {
+  width: 300px;
+  height: 250px;
+  border-radius: 10px;
+  padding: 1px;
+  background: radial-gradient(circle 230px at 0% 0%, #ffffff, #0c0d0d);
+  /* background: radial-gradient(
+    circle 230px at 0% 0%,
+    var(--white),
+    var(--black-seconday)
+  ); */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin: 0 auto;
+}
+
+.dot {
+  width: 5px;
+  aspect-ratio: 1;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0 0 10px #ffffff;
+  border-radius: 100px;
+  z-index: 2;
+  right: 10%;
+  top: 10%;
+  animation: moveDot 6s linear infinite;
+}
+
+@keyframes moveDot {
+  0%,
+  100% {
+    top: 10%;
+    right: 10%;
+  }
+  25% {
+    top: 10%;
+    right: calc(100% - 35px);
+  }
+  50% {
+    top: calc(100% - 30px);
+    right: calc(100% - 35px);
+  }
+  75% {
+    top: calc(100% - 30px);
+    right: 10%;
+  }
+}
+
+.card {
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  border-radius: 9px;
+  border: solid 1px #202222;
+  background-size: 20px 20px;
+  background: radial-gradient(circle 280px at 0% 0%, #444444, #0c0d0d);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #fff;
+}
+
+.ray {
+  width: 220px;
+  height: 45px;
+  border-radius: 100px;
+  position: absolute;
+  background-color: #c7c7c7;
+  opacity: 0.4;
+  box-shadow: 0 0 50px #fff;
+  filter: blur(10px);
+  transform-origin: 10%;
+  top: 0%;
+  left: 0;
+  transform: rotate(35deg);
+}
+
+.card .text {
+  font-weight: bolder;
+  font-size: 4rem;
+  background: linear-gradient(45deg, #000000 4%, #fff, #000);
+  background-clip: text;
+  color: transparent;
+  margin-bottom: 1rem;
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  background-color: #2c2c2c;
+}
+.topl {
+  top: 10%;
+  background: linear-gradient(90deg, #888888 30%, #1d1f1f 70%);
+}
+.bottoml {
+  bottom: 10%;
+}
+.leftl {
+  left: 10%;
+  width: 1px;
+  height: 100%;
+  background: linear-gradient(180deg, #747474 30%, #222424 70%);
+}
+.rightl {
+  right: 10%;
+  width: 1px;
+  height: 100%;
 }
