--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,12 @@ li {
   }
 }
 
+.section-title {
+  font-size: 4rem;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+}
+
 /* Header */
 header#navbar {
   position: fixed;
@@ -117,8 +123,11 @@ nav ul li {
   transition: 0.6s;
 }
 
-nav ul li.active,
 nav ul li:hover {
+  border-color: var(--red-primary);
+}
+
+nav ul li.active {
   background-color: var(--red-primary);
   border-color: var(--red-primary);
 }
@@ -132,8 +141,16 @@ nav ul li a {
   transition: 0.3s;
 }
 
-nav ul li.active a,
+/* nav ul li.active a,
 nav ul li:hover a {
+  color: var(--white);
+} */
+
+nav ul li:hover a {
+  color: var(--red-primary);
+}
+
+nav ul li.active a {
   color: var(--white);
 }
 
@@ -263,11 +280,19 @@ section#hero .container div:nth-child(1) .btn-primary {
   height: 500px;
   border-radius: 16px;
   margin: 0 auto;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
   overflow: hidden;
 
   /* box-shadow: 15px 15px 30px #bebebe,
   -15px -15px 30px #ffffff;  */
+
+  box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #ffffff;
+  transition: 0.2s ease-in-out;
+}
+
+.service-item:hover {
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
 }
 
 .service-pic {
@@ -322,7 +347,8 @@ section#hero .container div:nth-child(1) .btn-primary {
 /* ABOUT SECTION */
 
 #about {
-  background-color: var(--gray);
+  /* background-color: var(--gray); */
+  background-image: linear-gradient(to bottom, var(--gray), var(--white));
 }
 
 #about .container {
@@ -331,6 +357,20 @@ section#hero .container div:nth-child(1) .btn-primary {
   display: grid;
   grid-template-columns: 1.1fr 0.9fr;
   column-gap: 1.5rem;
+}
+
+#about .container > div:nth-of-type(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+#about .container > div:nth-of-type(1) p {
+  margin-bottom: 1.2rem;
+  width: 85%;
+  line-height: 2.8rem;
+  text-align: justify;
 }
 
 #about .container > div:nth-of-type(2) {
@@ -344,6 +384,7 @@ section#hero .container div:nth-child(1) .btn-primary {
   max-height: 550px;
   width: 359px;
   max-width: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 16px;
   overflow: hidden;
 }
@@ -420,7 +461,13 @@ section#hero .container div:nth-child(1) .btn-primary {
 }
 
 #about .stats {
-  background-color: var(--gray);
+  background-color: transparent;
+  backdrop-filter: blur(20px);
+  background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.2)
+  );
+  /* background-color: var(--gray); */
   /* background-color: var(--black-seconday); */
   padding: 9rem 0 6rem;
   height: 100svh;
