--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@
   --red-primary: #e30613;
   --red-secondary: #aa040e;
   --gray: #adadac;
+
+  --border: 4px;
+  --from: 30deg;
+  --distance: 46%;
+  /* --distance: 83%; */
 }
 
 * {
@@ -104,17 +109,18 @@ header#navbar.sticky {
   height: 58px;
 }
 
-nav {
+header#navbar nav {
+  all: unset;
   min-width: 500px;
 }
 
-nav ul {
+header#navbar nav ul {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-nav ul li {
+header#navbar nav ul li {
   padding: 0.6rem 1.4rem;
   border: solid 1px var(--gray);
   border-radius: 8px;
@@ -123,16 +129,16 @@ nav ul li {
   transition: 0.6s;
 }
 
-nav ul li:hover {
+header#navbar nav ul li:hover {
   border-color: var(--red-primary);
 }
 
-nav ul li.active {
+header#navbar nav ul li.active {
   background-color: var(--red-primary);
   border-color: var(--red-primary);
 }
 
-nav ul li a {
+header#navbar nav ul li a {
   font-size: 1.3rem;
   text-decoration: none;
   color: var(--black);
@@ -146,11 +152,11 @@ nav ul li:hover a {
   color: var(--white);
 } */
 
-nav ul li:hover a {
+header#navbar nav ul li:hover a {
   color: var(--red-primary);
 }
 
-nav ul li.active a {
+header#navbar nav ul li.active a {
   color: var(--white);
 }
 
@@ -248,17 +254,18 @@ section#hero .container div:nth-child(1) .btn-primary {
   padding: 9rem 0;
 }
 
-#services header {
+#services header,
+#why-us header {
   padding: 2rem 0;
   width: 100%;
   text-align: center;
   margin: 0 auto;
 }
 
-#services header h1 {
+/* #services header h2 {
   font-size: 4rem;
   text-transform: uppercase;
-}
+} */
 
 #services header h3 {
   font-size: 2rem;
@@ -365,7 +372,7 @@ section#hero .container div:nth-child(1) .btn-primary {
   height: 260.32px;
   object-fit: cover;
   position: absolute;
-  top: 5rem; /* Point de départ */
+  top: 2rem; /* Point de départ */
   right: -45px;
   transform: translate(0, 0); /* Ajustement initial */
   z-index: 10;
@@ -489,7 +496,7 @@ section#hero .container div:nth-child(1) .btn-primary {
   /* background-color: var(--gray); */
   /* background-color: var(--black-seconday); */
   padding: 9rem 0 6rem;
-  height: 100svh;
+  height: calc(100svh - 9rem);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -613,4 +620,148 @@ section#hero .container div:nth-child(1) .btn-primary {
   right: 10%;
   width: 1px;
   height: 100%;
+}
+
+/** why-us section **/
+
+#why-us {
+  padding: 9rem 0 6rem;
+}
+
+.reason-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9rem 6rem;
+  margin: 0 auto;
+}
+
+.reason-item {
+  max-width: 43rem;
+  height: 38rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  /* border-radius: 1rem; */
+  --s: 13rem; /* the size on the corner */
+  --t: 5px; /* the thickness of the border */
+  --g: 3.5rem; /* the gap between the border and the content */
+
+  padding: calc(var(--g) + var(--t));
+  outline: var(--t) solid var(--red-secondary); /* the color here */
+  outline-offset: calc(-1 * var(--t));
+  -webkit-mask: conic-gradient(at var(--s) var(--s), #0000 75%, #000 0) 0 0 /
+      calc(100% - var(--s)) calc(100% - var(--s)),
+    linear-gradient(#000 0 0) content-box;
+}
+
+.reason-icon {
+  max-width: 6rem;
+  max-height: 6rem;
+}
+
+.reason-item h3 {
+  font-size: 2.3rem;
+  color: var(--black);
+  margin-top: 2rem;
+}
+
+.reason-item p {
+  font-size: 2.1rem;
+  line-height: 3.5rem;
+  text-align: center;
+  margin-top: 2.7rem;
+  flex-grow: 1;
+}
+
+/*** Partie testimonial ***/
+.carousel {
+  margin: 2rem auto 0;
+  display: flex;
+  justify-content: center;
+  perspective: 250px;
+}
+
+.carousel a.carousel-item {
+  display: inline-block;
+  width: 600px;
+  height: 360px;
+  /* border: solid 1px red; */
+}
+
+.carousel a.carousel-item .img-area {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  left: 50%;
+  padding: 10px;
+  transform: translateX(-50%);
+}
+
+.img-area::after {
+  content: "";
+  border-radius: 999px;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: conic-gradient(
+    from var(--from),
+    var(--gray),
+    var(--black-seconday) var(--distance),
+    transparent var(--distance)
+  );
+  -webkit-mask: radial-gradient(
+    farthest-side,
+    transparent calc(100% - var(--border)),
+    #fff calc(100% - var(--border) + 1px)
+  );
+  mask: radial-gradient(
+    farthest-side,
+    transparent calc(100% - var(--border)),
+    #fff calc(100% - var(--border) + 1px)
+  );
+}
+
+.carousel a.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.carousel a.carousel-item .testi {
+  max-width: 100%;
+  height: 100%;
+  max-height: 300px;
+  border-radius: 16px;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  text-align: center;
+  padding: 7rem 1.8rem 2rem;
+  -webkit-box-shadow: 0px 0px 40px -10px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 0px 0px 40px -10px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 0px 40px -10px rgba(0, 0, 0, 0.7);
+}
+
+.carousel a.carousel-item .testi p {
+  margin-top: 1rem;
+  color: #262626;
+}
+
+.carousel a.carousel-item .testi h4 {
+  margin-top: 2rem;
+  color: var(--black-seconday);
+  text-transform: uppercase;
+}
+
+.carousel a.carousel-item .testi h5 {
+  margin-top: 0.5rem;
+  color: var(--red-primary);
+  letter-spacing: 5px;
+  text-transform: capitalize;
 }
