--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ header#navbar nav ul li {
   border-radius: 8px;
   margin: 0 1rem;
   cursor: pointer;
+  float: none;
   transition: 0.6s;
 }
 
@@ -144,6 +145,8 @@ header#navbar nav ul li a {
   color: var(--black);
   letter-spacing: 0.2rem;
   font-weight: 500;
+  padding: 0;
+  display: inline;
   transition: 0.3s;
 }
 
@@ -154,6 +157,7 @@ nav ul li:hover a {
 
 header#navbar nav ul li:hover a {
   color: var(--red-primary);
+  background-color: transparent;
 }
 
 header#navbar nav ul li.active a {
@@ -191,6 +195,8 @@ section#hero {
   height: 100svh;
   min-height: max-content;
   background-image: linear-gradient(to right, var(--white), var(--gray));
+  overflow-x: clip;
+  overflow-y: visible;
 }
 
 section#hero .container {
@@ -251,11 +257,33 @@ section#hero .container > div:nth-of-type(1) .btn-primary {
 section#hero .container > div:nth-of-type(2) {
   height: 90%;
   margin: auto 0;
+  animation: move 10s ease-in-out infinite;
+}
+
+@keyframes move {
+  0% {
+    transform: translateX(0em) translateY(0em);
+  }
+  25% {
+    transform: translateY(-1em) translateX(-1em);
+    rotate: -10deg;
+  }
+  50% {
+    transform: translateY(1em) translateX(-1em);
+  }
+  75% {
+    transform: translateY(-1.25em) translateX(1em);
+    rotate: 10deg;
+  }
+  100% {
+    transform: translateX(0em) translateY(0em);
+  }
 }
 
 #hero .hero-image-wrap {
   width: fit-content;
   height: fit-content;
+  transition: 150ms;
 }
 
 #hero .hero-image-wrap:nth-of-type(1) {
@@ -264,6 +292,7 @@ section#hero .container > div:nth-of-type(2) {
   position: absolute;
   top: 4rem;
   left: 0;
+  transform: rotate(0deg);
   z-index: 1;
 }
 
@@ -272,7 +301,7 @@ section#hero .container > div:nth-of-type(2) {
   height: 50svh;
   position: absolute;
   top: -4rem;
-  left: 15%;
+  left: 18%;
   transform: rotate(33deg);
   z-index: 3;
 }
@@ -282,7 +311,7 @@ section#hero .container > div:nth-of-type(2) {
   height: auto;
   position: absolute;
   top: 40%;
-  left: 50%;
+  left: 55%;
   transform: rotate(17deg);
   z-index: 2;
 }
@@ -308,11 +337,6 @@ section#hero .container > div:nth-of-type(2) {
   text-align: center;
   margin: 0 auto;
 }
-
-/* #services header h2 {
-  font-size: 4rem;
-  text-transform: uppercase;
-} */
 
 #services header h3 {
   font-size: 2rem;
@@ -433,6 +457,10 @@ h3.service-title {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+}
+
+#about .container > div:nth-of-type(1) .section-title {
+  margin-bottom: 3.5rem;
 }
 
 #about .container > div:nth-of-type(1) p {
@@ -920,6 +948,47 @@ footer {
 
 footer h4 {
   color: var(--white);
+  /* color: var(--black-seconday); */
   font-size: 1.3rem;
   letter-spacing: 2px;
 }
+
+/* .shine {
+  font-size: 2em;
+  font-weight: 900;
+  color: rgba(255, 255, 255, 0.3);
+  background: #222 -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(#222),
+      to(#222),
+      color-stop(0.5, #fff)
+    ) 0 0 no-repeat;
+  background-image: -webkit-linear-gradient(
+    -40deg,
+    transparent 0%,
+    transparent 40%,
+    #fff 50%,
+    transparent 60%,
+    transparent 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-background-size: 50px;
+  -webkit-animation: zezzz;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes zezzz {
+  0%,
+  10% {
+    background-position: -200px;
+  }
+  20% {
+    background-position: top left;
+  }
+  100% {
+    background-position: 800px;
+  }
+} */
